Adds a shared rake install task to stack gems
Use with task `rake stack:install` from merb root

--- a/merb-core/Rakefile
+++ b/merb-core/Rakefile
@@ -5,6 +5,8 @@ require "rake/testtask"
 require "spec/rake/spectask"
 require "fileutils"
 
+require File.expand_path("../../shared/tasks", __FILE__)
+
 # Load code annotation support library
 require File.expand_path("../tools/annotation_extract", __FILE__)
 
